...
    },
    "menu.reading": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Reading"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Lectura"
...
            "state": "translated",
            "value": "Privacidade"
          }
        }
      }
    },
    "reader.document": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "PDF document"
          }
...
    },
    "reader.follow.resume": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Resume automatic following"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Reanudar seguimiento automático"
...
    },
    "settings.language.en": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "English"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "English"
...
